welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:10: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:16: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:26: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:36: error: not found: value dogHouse
		dogHouse();		
                ^